# cloud-finops-agent

./: .gitignore  DEVELOPER_GUIDE.md  Dockerfile  README.md  app.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
